--- a/src/main/java/app/netlify/spkisp_ramdani/forms/FormLogin.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/forms/FormLogin.form
@@ -233,6 +233,9 @@
                     </LineBorder>
                   </Border>
                 </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/background.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Masuk"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="kHoverEndColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
