--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelEditData.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelEditData.form
@@ -111,6 +111,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Tambah"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="kButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="com.k33ptoo.components.KButton" name="kButton3">
           <Properties>
